# Gauntlet

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST  README.md  gauntlet-sensors.json  pyproject.toml  review-brief-data.json  review-brief-data.schema.json  review-brief.html
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
config/: semgrep.yml  sensor-tools.json
docs/: code-quality-sensors.md  coverage-gaps.md  custom-agent-routing.md  design-build-verify.md  design-lint-candidates.md  do-it-worktree-plan.md  evaluation-harnesses.md  evaluation-protocol.md  evaluation-tasks.md  gauntlet-v2-skill-audit.md  generated-context.md  github-discipline.md  global-router-rule-map.md  guarded-panel-plan-upgrade.md  local-documentation.md  meaningful-proof.md  optional-agent-profiles.md  parallel-workstreams.md  prd-execution.md  production-quality-bar.md  promotion-scanner.md  review-brief-v1-plan.md  skill-quality-bar.md  skill-quality-implementation-plan.md  subagent-plan-validator.md  thin-contract-assessment.md  ui-constitution.md  upstream-eval-skills.md  upstream-superpowers.json  upstream-superpowers.md  used-price-guarded-panel-pressure-test.md  workflow-etiquette.md  workflow-speedups.md
evals/: behavior-fixtures.json  design-build-verify-fixtures.json  orchestration-trace-fixtures.json  orchestration-trace-schema.json  refactor-skill-trace-fixtures.json  scorer-smoke-fixtures.json  skill-evals.json  thin-context-fixtures.json
router/: AGENTS.md  response-style.md
scripts/: context-audit.py  (+56 more)
(+296 files in other folders)
