[project]
name = "gauntlet-workflow"
version = "2.0.2"
description = "A product-thinking and proof harness for coding agents"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.12,<1",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
